pratique/2018-p1-f1-piramide/2018-p1-f1-piramide-comp.txt
2018-p1-f1-piramide.cpp: In function ‘int minPiramide(std::vector<std::vector<int> >&)’:
2018-p1-f1-piramide.cpp:21:21: error: ‘INT_MAX’ was not declared in this scope
   21 |     int minWeight = INT_MAX;
      |                     ^~~~~~~
2018-p1-f1-piramide.cpp:5:1: note: ‘INT_MAX’ is defined in header ‘<climits>’; did you forget to ‘#include <climits>’?
    4 | #include <algorithm>
  +++ |+#include <climits>
    5 | 
